--- a/css/bootstrap-select.css
+++ b/css/bootstrap-select.css
@@ -258,3 +258,50 @@
   opacity: 0;
 }
 /*# sourceMappingURL=bootstrap-select.css.map */
+
+
+
+
+/*-------------------------------------
+21.11.14 Custom
+-------------------------------------*/
+.bootstrap-select .dropdown-toggle.btn-default {
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+.bootstrap-select .btn-default {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+  vertical-align: middle;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.bootstrap-select .btn-default:focus {
+  border-color: #66afe9;
+  outline: 0 !important;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  background: none !important;
+}
+
+
+#subpage-header+.container>.row>div ul.list-unstyled li,
+.landing-header-wrapper+.container>.row>div ul.list-unstyled li,
+#subpage-header+.container>.row>div ul.list-unstyled li:before,
+.landing-header-wrapper+.container>.row>div ul.list-unstyled li:before {
+    content: none;
+    padding-left: 0px;
+}
